syntax = "proto3";

package category;

option go_package = "./proto;category";

service Category {
  // 增
  rpc CreateCategory(CategoryRequest) returns (CreateCategoryResponse) {}
  // 改
  rpc UpdateCategory(CategoryRequest) returns (UpdateCategoryResponse) {}
  // 删
  rpc DeleteCategory(DeleteCategoryRequest) returns(DeleteCatehoryResponse){}
  //查
  rpc  FindCategoryByName(FindByNameRequest) returns(CategoryResponse){}
  rpc FindCategoryByID(FindByIdRequest) returns(CategoryResponse){}
  rpc FindCategoryByLevel(FindByLevelRequest) returns(FindAllResponse){}
  rpc FindCategoryByParent(FindByParentRequest) returns(FindAllResponse){}
  rpc  FidAllCategory(FindAllRequest) returns (FindAllResponse){}
}

message CategoryRequest {
  string category_name = 1;
  uint32  category_level = 2;
  int64  catrgory_parent = 3;
  string  category_image = 4;
  string  category_description = 5;

}
message CreateCategoryResponse{
  string  message = 1;
  int64  category_id = 2;
}

message UpdateCategoryResponse{
  string  message = 1;
}
message  DeleteCategoryRequest{
  int64 category_id = 1;
}
message  DeleteCatehoryResponse{
  string message = 1;
}

message FindByNameRequest{
  // 根据名称查询
  string  category_name = 1;
}



message  CategoryResponse{
  int64  id = 1;
  string category_name = 2;
  uint32 category_level = 3;
  int64 category_prient = 4;
  string category_images = 5;
  string category_description = 6;
}

message FindByIdRequest{
  int64  category_id = 1;
}

message FindByLevelRequest{
  uint32 level =1;
}

message FindByLevelResponse{
   uint32 level = 1;
}
message FindByParentRequest{
  int64  prent_id =1;
}

message FindAllRequest{

}

message FindAllResponse{
  // 组合型复用
   repeated  CategoryResponse category=1;
}